[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Status_2.png" type="Texture" id=1]
[ext_resource path="res://assets/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://Cellphone/Status.gd" type="Script" id=3]
[ext_resource path="res://assets/tela_quintal.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="BackyardBackground" type="Sprite" parent="."]
position = Vector2( 639.75, 359.75 )
scale = Vector2( 0.676686, 0.838618 )
texture = ExtResource( 4 )

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 640, 361 )
scale = Vector2( 2.025, 2.05 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Status" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.26246, 0.26997 )
texture = ExtResource( 1 )

[node name="Button_happiness" type="Button" parent="."]
show_behind_parent = true
margin_left = 582.0
margin_top = 370.0
margin_right = 703.0
margin_bottom = 494.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_knowledge" type="Button" parent="."]
show_behind_parent = true
margin_left = 582.0
margin_top = 189.0
margin_right = 704.0
margin_bottom = 311.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_exit_status" type="Button" parent="."]
show_behind_parent = true
margin_left = 593.0
margin_top = 528.0
margin_right = 695.0
margin_bottom = 568.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_happiness" to="." method="_on_Button_happiness_pressed"]
[connection signal="pressed" from="Button_knowledge" to="." method="_on_Button_knowledge_pressed"]
[connection signal="pressed" from="Button_exit_status" to="." method="_on_Button_exit_status_pressed"]
